# devops-1.0

./: .gitignore  Cargo.toml  Dockerfile  GPU_OPTIMIZATION_SUMMARY.md  README.md  VOICE_AGENT_README.md  build.ps1  build_cpp_components.ps1  build_gpu_optimized.ps1  build_rust.bat  clone_voice.ps1  code_review_results.json  dev_agent.py  dev_agent_pipeline_src_main.rs_Use_structured_logging.patch  dev_agent_rust.ps1  dev_agent_rust.rs  dev_agent_rust_standalone.rs  kowalski_benchmark_scenario1_simple_llm_call_run_langchain.py_Add_type_hints.patch  kowalski_benchmark_scenario2_single_tool_use_run_langchain.py_Add_type_hints.patch  kowalski_benchmark_scenario3_memory_retrieval_run_langchain.py_Add_type_hints.patch  kowalski_benchmark_scenario4_csv_analysis_run_langchain.py_Add_type_hints.patch  kowalski_kowalski-federation_src_message.rs_Handle_errors_properly.patch  kowalski_kowalski-federation_src_tests_mod.rs_Handle_errors_properly.patch  kowalski_kowalski-tools_src_tests_mod.rs_Handle_errors_properly.patch  package.json  server.js  test_gpu_performance.ps1
ci-cd/: README.md  docker-compose.yml
ci-cd/.github/workflows/: ci-cd-pipeline.yml
dev_agent_pipeline/: Cargo.toml
monitoring/: alert_rules.yml  prometheus.yml
performance-tests/: load-test.js
src/: cli.rs  code_analyzer.rs  gpu_accelerator.rs  llm_agent.rs  local_brain.rs  main.rs  memory_system.rs  orchestrator.rs  voice_agent.rs  wasm_agent.rs
templates/: main.rs
wasm_modules/code_analyzer/: Cargo.toml
wasm_modules/code_analyzer/src/: lib.rs
