[package]
name = "dev_agent_pipeline"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core async runtime
tokio = { version = "1.0", features = ["full"] }

# CLI and argument parsing
clap = { version = "4.0", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# File system and path handling
walkdir = "2.4"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"

# Additional utilities
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio-test = "0.4" 