[package]
name = "dev_agent_pipeline"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core async runtime
tokio = { version = "1.0", features = ["full"] }

# CLI and argument parsing
clap = { version = "4.0", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# File system and path handling
walkdir = "2.4"
glob = "0.3"

# Git integration
git2 = "0.18"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# HTTP client for API calls
reqwest = { version = "0.11", features = ["json"] }

# WASM support
wasmtime = "18.0"
wasmtime-wasi = "18.0"

# Web framework for WASM hosting
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }

# Vector search for embeddings
qdrant-client = "1.7"

# Additional utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

# WASM build tools
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }

# Voice processing and audio
cpal = "0.15"
hound = "3.5"
symphonia = { version = "0.5", features = ["all"] }

# Local LLM integration
kalosm = "0.4"

# MCP server integration
agentai = "0.1"

# GPU acceleration (optional)
cuda-runtime-sys = { version = "0.3.0-alpha.1", optional = true }

# Voice cloning and synthesis
whisper-rs = "0.10"
tract-onnx = "0.20"

# High-speed IPC and gRPC
tonic = "0.11"
prost = "0.12"

# Subprocess management
subprocess = "0.2"

# Parallel processing for GPU acceleration
rayon = "1.8"

[dev-dependencies]
tokio-test = "0.4"

[features]
default = []
gpu = ["cuda-runtime-sys"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1 